# FlowType-Rust

./: .gitignore  Cargo.toml  HANDOFF.md  MAC-OS_SETUP.md  README.md  ROADMAP.md  Start-New-Repo-Prompt.md  package-lock.json  package.json  start.bat  start.ps1  start.sh
docs/plans/: 2026-01-26-macos-compat-refined.md  2026-01-26-macos-compat.md
src/: injector.rs  main.rs  model.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: injector.rs  lib.rs  model.rs  settings.rs
src-tauri/src/audio/: capture.rs  mod.rs  resample.rs  vad.rs
src-tauri/src/transcription/: engine.rs  mod.rs
src/ai/: whisper.rs
src/audio/: capture.rs  resample.rs  vad.rs
src/transcription/: engine.rs  mod.rs
ui/: package-lock.json  package.json
ui/src/: App.css  App.tsx  ShortcutsModal.tsx
