[package]
name = "flowtype-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio
cpal = "0.15"
ringbuf = "0.3" 
rubato = "0.14" # High-quality resampling

# Concurrency
crossbeam-channel = "0.5"
once_cell = "1.18"

# Error Handling & Logging
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Extras
# Extras
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] } # For model download
arboard = "3.2" # Cross-platform clipboard

# AI / ML
[dependencies.whisper-rs]
version = "0.13"

[dependencies.windows]
version = "0.48" # Or 0.52, checking latest stable usage
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility", # UIA
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
