[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"

# Engine Dependencies
cpal = "0.15"
ringbuf = "0.3"
rubato = "0.14"
crossbeam-channel = "0.5"
once_cell = "1.18"
anyhow = "1.0"
env_logger = "0.10"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
arboard = "3.2"
whisper-rs = "0.15"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
enigo = "0.2"
